# borealis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  borealis.sln  borealis.vcxproj  borealis.vcxproj.filters
src/: address.cpp  address.h  block.cpp  block.h  blockchain.cpp  blockchain.h  cocoa.h  common.h  crypto.cpp  crypto.h  key.cpp  key.h  main.cpp  miner.cpp  miner.h  test.cpp  transaction.cpp  transaction.h  wallet.cpp  wallet.h
